--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: 'Purna Title';
-    src: url('./assets/fonts/careny.otf') format('opentype');
+  font-family: 'Purna Title';
+  src: url('./assets/fonts/careny.otf') format('opentype');
 }
 
 @tailwind base;
@@ -8,63 +8,76 @@
 @tailwind utilities;
 
 @layer components {
-    body {
-        @apply font-work-sans;
-    }
+  ::selection {
+    @apply bg-dark text-light;
+  }
 
-    main,
-    section,
-    div {
-        @apply font-work-sans;
-    }
+  /* * {
+          scrollbar-width: thin;
+        } */
+  ::-webkit-scrollbar {
+    @apply w-0;
+  }
 
-    .navlink,
-    h1,
-    h2,
-    h3,
-    h4,
-    h5,
-    h6 {
-        @apply font-title;
-    }
+  body {
+    @apply font-work-sans;
+  }
 
-    p,
-    span,
-    label,
-    a,
-    input,
-    textarea,
-    button,
-    ul,
-    li {
-        @apply font-work-sans font-normal;
-    }
+  main,
+  section,
+  div {
+    @apply font-work-sans;
+  }
 
-    main {
-        @apply relative z-10 px-4 py-12 sm:py-24 md:px-12 md:py-32 lg:py-36 xl:px-16 xl:py-48;
-    }
+  .navlink,
+  h1,
+  h2,
+  h3,
+  h4,
+  h5,
+  h6 {
+    @apply font-title;
+  }
 
-    .navlink {
-        @apply transition-300 inline-flex items-center justify-center bg-logo-maroon/10 w-full p-8 border border-logo-maroon/20 hover:bg-logo-yellow/10 text-3xl font-extrabold capitalize text-dark tracking-wider group-hover:font-bold group-hover:tracking-widest text-center;
-    }
+  p,
+  span,
+  label,
+  a,
+  input,
+  textarea,
+  button,
+  ul,
+  li {
+    @apply font-work-sans font-normal;
+  }
 
-    .filter-white {
-        filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%) hue-rotate(288deg) brightness(102%) contrast(102%);
-    }
+  main {
+    @apply relative z-10 px-4 py-12 sm:py-24 md:px-12 md:py-32 lg:py-36 xl:px-16 xl:py-48;
+  }
 
-    .filter-black {
-        filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(7500%) hue-rotate(327deg) brightness(96%) contrast(104%);
-    }
+  .navlink {
+    @apply transition-300 inline-flex w-full items-center justify-center border border-logo-maroon/20 bg-logo-maroon/10 p-8 text-center text-3xl font-extrabold capitalize tracking-wider text-dark hover:bg-logo-yellow/10 group-hover:font-bold group-hover:tracking-widest;
+  }
 
-    .transition-300 {
-        @apply transition-all duration-300 ease-linear;
-    }
+  .filter-white {
+    filter: brightness(0) saturate(100%) invert(100%) sepia(100%) saturate(0%)
+      hue-rotate(288deg) brightness(102%) contrast(102%);
+  }
 
-    .transition-700 {
-        @apply transition-all duration-700 ease-in-out;
-    }
+  .filter-black {
+    filter: brightness(0) saturate(100%) invert(0%) sepia(0%) saturate(7500%)
+      hue-rotate(327deg) brightness(96%) contrast(104%);
+  }
 
-    .transition-1000 {
-        @apply transition-all duration-1000;
-    }
+  .transition-300 {
+    @apply transition-all duration-300 ease-linear;
+  }
+
+  .transition-700 {
+    @apply transition-all duration-700 ease-in-out;
+  }
+
+  .transition-1000 {
+    @apply transition-all duration-1000;
+  }
 }
