--- a/src/index.css
+++ b/src/index.css
@@ -24,6 +24,7 @@
   }
 
   main,
+  footer,
   section {
     @apply font-work-sans bg-light;
   }
@@ -51,7 +52,8 @@
     @apply font-work-sans font-normal;
   }
 
-  main {
+  main,
+  footer {
     @apply relative z-10 px-4 py-12 sm:py-24 md:px-12 md:py-32 lg:py-36 xl:px-16 xl:py-48;
   }
 
